# Uni

./: README.md
First Year/mario-game/game/: board.py  clases.py  constants.py  enemies.py
First Year/mario-game/game/assets/: mario_resource.pyxres  mario_resource_old1.pyxres
Second Year/AI Project/AI_v1/: Map.py  Radar.py  SearchEngine.py  main.py  scenarios.json
Second Year/Statistics Project with R/: Concrete_Data_Statistics.xls  code.R
Third year/Computer Architecture/render-2025-par-p81-13-main/: CMakeLists.txt  CMakePresets.json  README.md
Third year/Computer Architecture/render-2025-par-p81-13-main/cmake/: TestUtils.cmake
Third year/Computer Architecture/render-2025-par-p81-13-main/common/: CMakeLists.txt
Third year/Computer Architecture/render-2025-par-p81-13-main/common/include/: camera.hpp  config.hpp  cylinder.hpp  intersection.hpp  material.hpp  object.hpp  pixel.hpp  ray.hpp  scene.hpp  sphere.hpp  vector.hpp
Third year/Computer Architecture/render-2025-par-p81-13-main/common/src/: camera.cpp  config.cpp  cylinder.cpp  material.cpp  scene.cpp  sphere.cpp  vector.cpp
Third year/Computer Architecture/render-2025-par-p81-13-main/par/: CMakeLists.txt
Third year/Computer Architecture/render-2025-par-p81-13-main/utcommon/: CMakeLists.txt  test_camera.cpp  test_config.cpp  test_cylinder.cpp  test_material.cpp  test_scene.cpp  test_sphere.cpp  test_vector.cpp
Third year/Computer Architecture/render-2025-par-p81-13-main/utpar/: CMakeLists.txt  test_image_par.cpp  (+1 more)
Third year/Cryptography/app-criptografia-main/: README.md  requirements.txt
(+151 files in other folders)
